# cmake-tut2

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/lib/: lib.hpp
lib/src/: lib.cpp
proj/: CMakeLists.txt
proj/include/: box.hpp
proj/src/: box.cpp  main.cpp
